Bug 73766 - Template Manager: [a11y] thumbnail view can not navigate with keyboard onto attribute menubar of each template thumbnail object
Summary: Template Manager: [a11y] thumbnail view can not navigate with keyboard onto a...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.0.2 rc
Hardware: All All
: highest major
Assignee: Andrzej Hunt
URL:
Whiteboard: target:4.2.5
Keywords:
Depends on:
Blocks: a11y, Accessibility mab4.2
  Show dependency treegraph
 
Reported: 2014-01-18 16:01 UTC by V Stuart Foote
Modified: 2016-10-25 19:59 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description V Stuart Foote 2014-01-18 16:01:00 UTC
As implemented in Template Manager the thumbnail view list provides a menu bar of attributes for each template, i.e. 'Open', 'Edit', 'Properties', 'Set as default', 'Move to folder', 'Export', and 'Delete'.

When the template has focus, its attribute menu bar is displayed. Cursor key(s) will shift between thumbnail views of each template. <TAB> key will advance out of the thumbnail view panel.

Unfortunately, using only a keyboard (i.e. without a mouse), there is no way to position onto the attribute menu bar and make a selection.

This can be demonstrated with the presentation templates install with a default or administrative install.

1. Open LibreOffice
2. select the Template Manager button
3. in the Template Manager frame that opens, expand the frame size (default size is a little cramped-- bug 73568)
4. as default on installation the initial opening of Template Manager will be onto the 'Presentations' tab. But, if not there navigate (<TAB>, <Shift><TAB> to reach the Paged Tab menu, and then cursor (R,L) to land on the 'Presentations' page tab item.
5. Use <TAB> to advance down onto the thumbnail view list of 'Presentations' templates. When reached, the first template thumbnail will have focus and its attributes menu will open at the top (under the 'Documents', 'Spreadsheets', 'Presentations', and 'Drawings' page tabs.
6. No selection is possible, as the attribute menu is not exposed to keyboard navigation--only selection by mouse.
7. Any keyboard cursor movement moves focus to adjacent template thumbnails, any <TAB> movement advances out of the thumbnail view.

Setting as MAB 4.2 with target of 4.2.1 as probably too late to do anything for 4.2.0
Comment 1 Jean-Baptiste Faure 2014-01-25 10:16:13 UTC
Confirmed in version 4.2.0.3.0+ under Ubuntu 13.10 x86-64

Best regards. JBF
Comment 2 gibi 2014-02-16 14:15:46 UTC
Confirmed also on version 4.2.1.1 Build ID: d7dbbd7842e6a58b0f521599204e827654e1fb8b linux X64 DEB.

Anyway, I'm not sure it should be part of the Most Annoying Bugs list.
Comment 3 V Stuart Foote 2014-02-16 15:08:02 UTC
(In reply to comment #2)
> 
> Anyway, I'm not sure it should be part of the Most Annoying Bugs list.

Perhaps, but the ESC asked for a11y issues as MABs. 

I'd put this bug 73766, and bug 72287 (and possibly bug 69550) all in the category of major a11y annoyances because the actions can not be performed by keyboard action alone--only by mouse GUI movements.
Comment 4 Andrzej Hunt 2014-05-06 12:57:49 UTC
I'm not sure I understand this bug: using either master, or a recent build
of libreoffice-4-2 (i.e. after 4.2.4):
Once I have selected a given template using the steps above, I am able to move the focus using <TAB> from thumbnails->tab bar->attribute menu->other menu (search/actions etc.)->thumbnails again, i.e. I am able to access various tools on the attribute menu using the keyboards (for example edit, properties, etc. all work as expected).

(I've also tested after reverting any possibly relevant commits on 4.2, which doesn't change the behaviour in any way.)

However in 4.2 the focus seems to move in a counterintuitive direction, i.e. from tab bar to the other menu, before going to the attribute menu (thumbnails->tab bar->other menu->attribute menu->thumbnails again), maybe this is causing some confusion (this doesn't happen on master, but will need fixing in 4.2)?
Comment 5 V Stuart Foote 2014-05-06 14:28:29 UTC
Andrzej,
(In reply to comment #4)
> I'm not sure I understand this bug: using either master, or a recent build
> of libreoffice-4-2 (i.e. after 4.2.4):

You are right, I'd not checked recently. But we now have correct mixture of <TAB> and Cursor <R,L,U,D> keyboard movements to position onto the Template thumbnail view menu bar.

It was not correct in 4.2.0.4
Version: 4.2.0.4
Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71

But is reachable (although out of sequence) by 4.2.3.3
Version: 4.2.3.3
Build ID: 6c3586f855673fa6a1576797f575b31ac6fa0ba3

And on a current builds of master, even the sequencing seems correct as you note.
Maybe Kendy or Zolnai corrected but did not close this?

Setting resolved fixed, but may poke around to see which commit(s) corrected things.
Comment 6 Andrzej Hunt 2014-05-06 14:36:37 UTC
(In reply to comment #5)
> And on a current builds of master, even the sequencing seems correct as you
> note.
> Maybe Kendy or Zolnai corrected but did not close this?
> 
> Setting resolved fixed, but may poke around to see which commit(s) corrected
> things.

It turns out the dialog was converted to .ui in b29c078c7f193dd7dae74baf89fe1abb9264239c
which is why things work as expected in master.

I've produced a simpler fix ( https://gerrit.libreoffice.org/#/c/9257/ ) which
should hopefully make it into 4.2 though (backporting the .ui conversion
would probably be too messy).
Comment 7 Andrzej Hunt 2014-05-06 14:38:42 UTC
(Sorry, I seem to have reset the status accidentally -- setting back to resolved, fixed)
Comment 8 Commit Notification 2014-05-06 15:04:47 UTC
Andrzej Hunt committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e2f38ef8b6a5e30bee9e05fba7aec47287dddae4&h=libreoffice-4-2

fdo#73766 TemplateManager: construct toolbars in focus traversal order.


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.