fdo#73766 TemplateManager: construct toolbars in focus traversal order.

Focus traversal happens in the order that UI items are initialised. As
the "TemplateBar" (i.e. actions that can be used on a selected template)
is to the left of the "ActionBar" (i.e. search/etc.), the TemplateBar
would be expected to be first in the traversal order.

This patch is only relevant for LibreOffice 4.2 -- in master (to become 4.3)
this dialog has already been converted to .ui, and focus traversal works
as expected.

Change-Id: I3328f2e79a8e5a781aceb29f79d0c54d4b421e74